# MasterProjectCpp

./: .gitignore  CMakeLists.txt  Constants.cpp  Constants.h  Fluid.cpp  Fluid.h  Grid.cpp  Grid.h  Kernels.cpp  Kernels.h  PBModel.cpp  PBModel.h  SystemProperties.cpp  SystemProperties.h  bruteForceParamEstimation.cpp  chartMeanSSE.cpp  checkSensitivity.cpp  main.cpp  testLogNormalInitialCondition.cpp  testSolution.cpp  utilities.cpp  utilities.h
results/: raw_logNormal3.txt
